[gd_scene load_steps=5 format=3 uid="uid://76gsp4ebwiuc"]

[ext_resource type="Script" path="res://Enemies/Worm.gd" id="1_mh472"]
[ext_resource type="Texture2D" uid="uid://b0apidial1asc" path="res://Sprites/Worm.png" id="2_wf82b"]
[ext_resource type="PackedScene" uid="uid://bxno88hy1smwd" path="res://Enemies/worm_body.tscn" id="3_qldn8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xgnng"]
radius = 100.0

[node name="Worm" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
script = ExtResource("1_mh472")

[node name="Head" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(4, 12)
rotation = 3.14159
texture = ExtResource("2_wf82b")
region_enabled = true
region_rect = Rect2(213.99, 6.80727, 131.433, 209.736)

[node name="WormBody" parent="." instance=ExtResource("3_qldn8")]
scale = Vector2(1, 1)

[node name="Tail" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(390, 25)
rotation = 0.00621772
texture = ExtResource("2_wf82b")
region_enabled = true
region_rect = Rect2(4.42994, 226.638, 298.27, 148.609)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="Sense" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sense"]
shape = SubResource("CircleShape2D_xgnng")

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="TravelTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="BodyTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="Sense" to="." method="_on_sense_area_entered"]
[connection signal="area_exited" from="Sense" to="." method="_on_sense_area_exited"]
[connection signal="timeout" from="HoverTimer" to="." method="_on_hover_timer_timeout"]
[connection signal="timeout" from="TravelTimer" to="." method="_on_travel_timer_timeout"]
